fix error message in social to make it visible

--- a/django/ft_transcendence/static/css/main.css
+++ b/django/ft_transcendence/static/css/main.css
@@ -166,6 +166,11 @@
 		background: #1A003E;
 	}
 
+	.error-message {
+		color: #f44336;
+		font-weight: bold;
+	}
+
 .exception {
 	position: fixed;
 	top: 20px;
